compute sdf stats

--- a/explore_geometry.ipynb
+++ b/explore_geometry.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d4deb3a6",
+   "id": "2d802eb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7c30a986",
+   "id": "09c9f19d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3dc6d138",
+   "id": "1d7c7056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "97481a5f",
+   "id": "d4b9841b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "29e7ae46",
+   "id": "a7673502",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b63e6214",
+   "id": "68de290a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d8c34fcb",
+   "id": "ff26313e",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7e74479b",
+   "id": "845730a2",
    "metadata": {
     "scrolled": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d0ab76",
+   "id": "7389992f",
    "metadata": {},
    "source": [
     "Notes:\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7a532913",
+   "id": "e0af97cc",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e02ac3fe",
+   "id": "2211364c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f377ea58",
+   "id": "9ed8433d",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "670ae3ce",
+   "id": "26b4d7a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c2f24f72",
+   "id": "a1929129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b1860762",
+   "id": "3c2ebd2e",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a7fca10",
+   "id": "b9af9c84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                                                                                                                               | 0/381 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "names_list = []\n",
+    "distances = []\n",
+    "for path in tqdm(paths):\n",
+    "    mesh = pv.read(path)\n",
+    "    _ = pv_points_downsample.compute_implicit_distance(mesh, inplace=True)\n",
+    "    distances.append(pv_points_downsample['implicit_distance'])\n",
+    "    names_list.append(path.stem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "098d7487",
    "metadata": {},
    "outputs": [],
    "source": []
