compute sdf stats

--- a/explore_geometry.ipynb
+++ b/explore_geometry.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "2d802eb5",
+   "execution_count": 49,
+   "id": "b98160dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "from pathlib import Path\n",
     "from tempfile import TemporaryFile\n",
     "\n",
@@ -23,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "09c9f19d",
+   "id": "e8749c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1d7c7056",
+   "id": "79e966bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d4b9841b",
+   "id": "fbeb702c",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a7673502",
+   "id": "296656f7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "68de290a",
+   "id": "6967bda2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ff26313e",
+   "id": "e6bd7f6a",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "845730a2",
+   "id": "6f1c2724",
    "metadata": {
     "scrolled": false
    },
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7389992f",
+   "id": "4f77a30b",
    "metadata": {},
    "source": [
     "Notes:\n",
@@ -231,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e0af97cc",
+   "id": "3b75ddde",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2211364c",
+   "id": "051c1f7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9ed8433d",
+   "id": "a0015658",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "26b4d7a4",
+   "id": "0df277b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a1929129",
+   "id": "469106a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3c2ebd2e",
+   "id": "4b157ab0",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9af9c84",
+   "id": "d9ebacb9",
    "metadata": {},
    "outputs": [
     {
@@ -372,14 +373,30 @@
     "for path in tqdm(paths):\n",
     "    mesh = pv.read(path)\n",
     "    _ = pv_points_downsample.compute_implicit_distance(mesh, inplace=True)\n",
-    "    distances.append(pv_points_downsample['implicit_distance'])\n",
+    "    distances.append(pv_points_downsample['implicit_distance'].reshape(-1,1))\n",
     "    names_list.append(path.stem)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098d7487",
+   "id": "652fb472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances = np.vstack(distances)\n",
+    "with open(data_dir / \"SimJEB_metadata\" / \"distances.npy\", \"wb\") as f:\n",
+    "    np.save(f, distances)\n",
+    "\n",
+    "names_dict = {name: index for index, name in enumerate(names_list)}\n",
+    "with open(data_dir / \"SimJEB_metadata\" / \"names_positions.json\", \"wb\") as json_file:\n",
+    "    json.dump(names_dict, json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20de2c94",
    "metadata": {},
    "outputs": [],
    "source": []
