tsne on 1M points

--- a/explore_geometry.ipynb
+++ b/explore_geometry.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "31fcf844",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
@@ -22,6 +13,7 @@
     "from tempfile import TemporaryFile\n",
     "\n",
     "import numpy as np\n",
+    "from sklearn.manifold import TSNE\n",
     "import pyvista as pv\n",
     "import pandas as pd\n",
     "from tqdm.auto import tqdm\n",
@@ -343,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a955fdd",
+   "id": "cf96ad79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e5bfd37",
+   "id": "7afaf197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1fae24d8",
    "metadata": {},
    "outputs": [
@@ -406,8 +398,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                                                                                                                                                               | 0/381 [00:00<?, ?it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 381/381 [5:21:34<00:00, 50.64s/it]\n"
      ]
     }
    ],
@@ -443,10 +434,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7378002c",
+   "id": "7142f590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "381it [00:36, 10.33it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "distances = []\n",
+    "names_list = []\n",
+    "for path in tqdm((data_dir / \"SimJEB_cluster_distances\").glob(\"*.npy\")):\n",
+    "    names_list.append(path.stem)\n",
+    "    distances.append(np.load(path).reshape((-1,1)))\n",
+    "distances = np.hstack(distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57914dc8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "embeddings = TSNE(n_components=2, learning_rate='auto', init='random', perplexity=3).fit_transform(distances)"
+   ]
   }
  ],
  "metadata": {
