--- a/explore_geometry.ipynb
+++ b/explore_geometry.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "31fcf844",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8adebeeb",
    "metadata": {},
    "outputs": [],
@@ -417,23 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fe61672f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# distances = np.hstack(distances)\n",
-    "# with open(data_dir / \"SimJEB_metadata\" / \"distances.npy\", \"wb\") as f:\n",
-    "#     np.save(f, distances)\n",
-    "\n",
-    "# names_dict = {name: index for index, name in enumerate(names_list)}\n",
-    "# with open(data_dir / \"SimJEB_metadata\" / \"names_positions.json\", \"wb\") as json_file:\n",
-    "#     json.dump(names_dict, json_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7142f590",
    "metadata": {},
    "outputs": [
@@ -441,7 +434,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "381it [00:36, 10.33it/s]\n"
+      "381it [00:08, 44.82it/s]\n"
      ]
     }
    ],
@@ -450,7 +443,16 @@
     "names_list = []\n",
     "for path in tqdm((data_dir / \"SimJEB_cluster_distances\").glob(\"*.npy\")):\n",
     "    names_list.append(path.stem)\n",
-    "    distances.append(np.load(path).reshape((-1,1)))\n",
+    "    distances.append(np.load(path).reshape((-1,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8258d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "distances = np.hstack(distances)"
    ]
   },
