--- a/explore_geometry.ipynb
+++ b/explore_geometry.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8adebeeb",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "7142f590",
    "metadata": {},
    "outputs": [
@@ -434,26 +434,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "381it [00:08, 44.82it/s]\n"
+      "381it [00:04, 79.74it/s] \n"
      ]
     }
    ],
    "source": [
     "distances = []\n",
     "names_list = []\n",
+    "# random_indices = np.random.choice(1000000, size=500000, replace=False)\n",
     "for path in tqdm((data_dir / \"SimJEB_cluster_distances\").glob(\"*.npy\")):\n",
     "    names_list.append(path.stem)\n",
-    "    distances.append(np.load(path).reshape((-1,1)))"
+    "    distances.append(np.load(path).reshape((1,-1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "baf5b4c7",
+   "execution_count": 32,
+   "id": "0d5a9621",
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = np.hstack(distances)"
+    "distances = np.vstack(distances)"
    ]
   },
   {
@@ -465,6 +466,34 @@
    "source": [
     "embeddings = TSNE(n_components=2, learning_rate='auto', init='random', perplexity=3).fit_transform(distances)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41b83667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a46d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(embeddings[:,0],embeddings[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0034044c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
