--- a/npy_to_vtk_sdf.ipynb
+++ b/npy_to_vtk_sdf.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d60d762",
+   "id": "bc4036d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,68 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "aa8cd94b",
+   "execution_count": 16,
+   "id": "262e2585",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load(\"/home/max/Desktop/python_projects/SimJEB_sdf/19.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1d835a75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pts = data[:,:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2bc45bf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sdf = pts[:,-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "aa53528d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc = pv.PolyData(pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e7d46e00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc[\"sdf\"] = sdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "fe23174c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc.save(\"/home/max/Desktop/python_projects/SimJEB_sdf/19.vtk\")"
+    "id_ = 0\n",
+    "data = np.load(f\"/home/max/Desktop/python_projects/SimJEB_sdf/{id_}.npy\")\n",
+    "pts = data[:,:3]\n",
+    "sdf = pts[:,-1]\n",
+    "pc = pv.PolyData(pts)\n",
+    "pc[\"sdf\"] = sdf\n",
+    "pc.save(f\"/home/max/Desktop/python_projects/SimJEB_sdf/{id_}.vtk\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90acc984",
+   "id": "170b2661",
    "metadata": {},
    "outputs": [],
    "source": []
