fix sdf value reading

--- a/npy_to_vtk_sdf.ipynb
+++ b/npy_to_vtk_sdf.ipynb
@@ -13,15 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "262e2585",
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_ = 0\n",
+    "id_ = 4\n",
     "data = np.load(f\"/home/max/Desktop/python_projects/SimJEB_sdf/{id_}.npy\")\n",
     "pts = data[:,:3]\n",
-    "sdf = pts[:,-1]\n",
+    "sdf = data[:,-1]\n",
     "pc = pv.PolyData(pts)\n",
     "pc[\"sdf\"] = sdf\n",
     "pc.save(f\"/home/max/Desktop/python_projects/SimJEB_sdf/{id_}.vtk\")"
