--- a/compute_SDF.ipynb
+++ b/compute_SDF.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "a5c17246",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -35,12 +44,13 @@
    "source": [
     "data_dir = Path(\"/home/max/Desktop/python_projects/\")\n",
     "root = data_dir / \"SimJEB_surfmesh\"\n",
-    "dest = data_dir / \"SimJEB_sdf\""
+    "dest = data_dir / \"SimJEB_sdf2\"\n",
+    "dest.mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "ad8040fd",
    "metadata": {},
    "outputs": [],
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "c7bc0a0f",
    "metadata": {},
    "outputs": [
@@ -60,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 381/381 [1:02:03<00:00,  9.77s/it]\n"
+      "  1%|▎                                          | 3/381 [00:24<51:45,  8.22s/it]"
      ]
     }
    ],
@@ -78,9 +88,9 @@
     "    \n",
     "    max_permutation = min(bounds[:,1] - bounds[:,0]) * margin\n",
     "    s = np.random.default_rng().gamma(1., 1., num_perturb_samples)\n",
-    "    median = (min(s) + max(s)) / 2\n",
-    "    s[s > median] = median\n",
-    "    s *= max_permutation / median\n",
+    "#     median = (min(s) + max(s)) / 2\n",
+    "#     s[s > median] = median\n",
+    "    s *= max_permutation / max(s)\n",
     "    rnd_sign = np.random.choice([-1, 1], size=num_perturb_samples)\n",
     "    s *= rnd_sign\n",
     "    \n",
