filter utliers and split train test

--- a/compute_SDF.ipynb
+++ b/compute_SDF.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f5d9546d",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "ad8040fd",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c7bc0a0f",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▎                                          | 3/381 [00:24<51:45,  8.22s/it]"
+      "100%|█████████████████████████████████████████| 381/381 [55:45<00:00,  8.78s/it]\n"
      ]
     }
    ],
@@ -88,8 +88,8 @@
     "    \n",
     "    max_permutation = min(bounds[:,1] - bounds[:,0]) * margin\n",
     "    s = np.random.default_rng().gamma(1., 1., num_perturb_samples)\n",
-    "#     median = (min(s) + max(s)) / 2\n",
-    "#     s[s > median] = median\n",
+    "    median = (min(s) + max(s)) / 2\n",
+    "    s[s > median] = median\n",
     "    s *= max_permutation / max(s)\n",
     "    rnd_sign = np.random.choice([-1, 1], size=num_perturb_samples)\n",
     "    s *= rnd_sign\n",
@@ -113,7 +113,7 @@
     "    \n",
     "    data = np.hstack([samples, distances])\n",
     "    \n",
-    "    with open(data_dir / \"SimJEB_sdf\" / f\"{path.stem}.npy\", \"wb\") as f:\n",
+    "    with open(dest / f\"{path.stem}.npy\", \"wb\") as f:\n",
     "        np.save(f, data)"
    ]
   },
