checking PCA on DeepSDF embeddings after 900 iters

--- a/clusters.ipynb
+++ b/clusters.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "95901dc7",
+   "execution_count": 1,
+   "id": "b673aa35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94ec2835",
+   "id": "b569adff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "93e8bcec",
+   "id": "c173a082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "556705c5",
+   "id": "c30699d2",
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7a3d288d",
+   "execution_count": 5,
+   "id": "9ec787d1",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "381"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1b4dd80e",
+   "execution_count": 6,
+   "id": "7452a8ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3d86a634",
+   "execution_count": 7,
+   "id": "ab6ce90f",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "34"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,8 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "281981eb",
+   "execution_count": 8,
+   "id": "9b6bd10d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bbfcc2c3",
+   "execution_count": 9,
+   "id": "96a06673",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "347"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cb3c2bcb",
+   "id": "86189ed9",
    "metadata": {},
    "outputs": [
     {
@@ -387,9 +387,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bac66404",
+   "metadata": {},
+   "source": [
+    "# PC distances dim reduction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "20d62972",
+   "id": "405a9656",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cd241cb3",
+   "id": "f9d63e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fe3f621b",
+   "id": "bd0a7d5e",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8e66249d",
+   "id": "feef42c4",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "736f7af5",
+   "id": "7d2ff198",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c56d2b7d",
+   "id": "9c476b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "aae94692",
+   "id": "37a694d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fd49e0df",
+   "id": "6ab593fe",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7b097eb9",
+   "id": "4c5665ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,12 +585,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77a4b2ce",
+   "metadata": {},
+   "source": [
+    "# DeepSDF embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bfdeef7c",
+   "execution_count": 10,
+   "id": "12e621d0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "codes_dir = root_dir / \"experiments/mixed/LatentCodes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6460c476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pth_path = codes_dir / \"latest.pth\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6fcf4ece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = torch.load(pth_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d113c6fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([294, 64])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"latent_codes\"][\"weight\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b54927a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(metadata_dir / \"train.txt\") as f:\n",
+    "    train = f.readlines()\n",
+    "train = [int(e.strip()) for e in train]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4acfb687",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "294"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7376a4b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df[df['id'].isin(train)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "99436b39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "294"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d97e2a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=2)\n",
+    "transform = pca.fit(data[\"latent_codes\"][\"weight\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6a8f1c18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.14105572, 0.07826261])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ac763b94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = transform.transform(data[\"latent_codes\"][\"weight\"])\n",
+    "df_embeddings = pd.DataFrame({\"id\": train, \"component_0\": embeddings[:,0], \"component_1\": embeddings[:,1]})\n",
+    "df_tmp = df_train.merge(df_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aaec4e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(\n",
+    "    df_tmp,\n",
+    "    x='component_0',\n",
+    "    y='component_1',\n",
+    "    color='category',\n",
+    "    hover_data=['id'],\n",
+    "    title='PCA of SimJEB geometries based on DeepSDF embeddings',\n",
+    "    labels={'X': 'component_0', 'Y': 'component_1', 'Type': 'category', 'ID': 'ID'}\n",
+    ")\n",
+    "\n",
+    "# Save the plot to an HTML file\n",
+    "fig.write_html(metadata_dir / \"deepsdf_categories.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1fd5542",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100, 1000, 100):\n",
+    "    pth_path = codes_dir / f\"{i}.pth\"\n",
+    "    codes = torch.load(pth_path)[\"latent_codes\"][\"weight\"]\n",
+    "    embeddings = "
+   ]
   }
  ],
  "metadata": {
