--- a/clusters.ipynb
+++ b/clusters.ipynb
@@ -16,7 +16,8 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.manifold import TSNE\n",
     "import plotly.express as px\n",
-    "import torch"
+    "import torch\n",
+    "import umap"
    ]
   },
   {
@@ -359,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "86189ed9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e3a47d3cbfe400dbbc588b87eee5531",
+       "model_id": "705707a4b2c84bf19d09cffa0651fa77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,6 +394,73 @@
    "source": [
     "# PC distances dim reduction"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7140bdf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numba/np/ufunc/parallel.py:371: NumbaWarning: The TBB threading layer requires TBB version 2021 update 6 or later i.e., TBB_INTERFACE_VERSION >= 12060. Found TBB_INTERFACE_VERSION = 12050. The TBB threading layer is disabled.\n",
+      "  warnings.warn(problem)\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding = umap.UMAP().fit_transform(sdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8b4aee52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"component_0\"] = embedding[:,0]\n",
+    "df[\"component_1\"] = embedding[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d0e9f481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(\n",
+    "    df,\n",
+    "    x='component_0',\n",
+    "    y='component_1',\n",
+    "    color='category',\n",
+    "    hover_data=['id'],\n",
+    "    title='UMAP of SimJEB geometries based on pointcloud distances',\n",
+    "    labels={'X': 'component_0', 'Y': 'component_1', 'Type': 'category', 'ID': 'ID'}\n",
+    ")\n",
+    "\n",
+    "# Save the plot to an HTML file\n",
+    "fig.write_html(metadata_dir / \"pointcloud_distance_umap_categories.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ea6d370",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5513e8e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
