--- a/define_mesh_interfaces.ipynb
+++ b/define_mesh_interfaces.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6488f3c2",
+   "id": "64d1d986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "094dee35",
+   "id": "79bf3682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "02c62ecf",
+   "id": "58d52b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5813c48a",
+   "id": "8f1e578c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "88e85e59",
+   "id": "c5a93551",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a6511c63",
+   "id": "2795cc61",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c1af4e41",
+   "id": "32dec6d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "69071524",
+   "id": "a7baf297",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f1983efa",
+   "id": "4f967cc9",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ab243701",
+   "id": "23ffeeaa",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0ba26d3e",
+   "id": "59a6ad31",
    "metadata": {},
    "outputs": [
     {
@@ -197,18 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "c4c0da9b",
+   "execution_count": 49,
+   "id": "6448a646",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cyl_hor = pv.Cylinder(center=center, radius=diameter/2, direction=direction, height=40)"
+    "cyl_hor = pv.Cylinder(center=center, radius=diameter/2, direction=direction, height=60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "75e396d7",
+   "execution_count": 50,
+   "id": "76f28cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,8 +217,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "b5a3a490",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for center, name in zip(\n",
+    "    [[0,-148,5], [0,0,5], [38,-146,5], [51,1.5,5]], \n",
+    "    [\"cyl_fl\", \"cyl_fr\", \"cyl_rl\", \"cyl_rr\"]\n",
+    "):\n",
+    "    cyl_tmp_large = pv.Cylinder(center=center, radius=7, direction=[0,0,1], height=20)\n",
+    "    clipped = mesh.clip_surface(cyl_tmp_large, True)\n",
+    "    \n",
+    "    normals_vert = clipped.cell_normals\n",
+    "    direction = np.mean(normals_vert[normals_vert[:,2] > 0.9], axis=0)\n",
+    "    \n",
+    "    verts = clipped.points[abs(clipped.point_normals[:,2]) < 0.1]\n",
+    "    diameter = max(max(verts[:,0]) - min(verts[:,0]), max(verts[:,2]) - min(verts[:,2]))\n",
+    "    \n",
+    "    cyl = pv.Cylinder(\n",
+    "        center=np.mean(verts, axis=0), \n",
+    "        radius=diameter/2*0.99, \n",
+    "        direction=direction, \n",
+    "        height=30\n",
+    "    )\n",
+    "    \n",
+    "    cyl.save(\n",
+    "        f\"/home/max/Desktop/python_projects/SimJeb/SimJEB_metadata/{name}.stl\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a37c125b",
+   "id": "081648f6",
    "metadata": {},
    "outputs": [],
    "source": []
