filter outliers based on interface matching

--- a/define_mesh_interfaces.ipynb
+++ b/define_mesh_interfaces.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "64d1d986",
+   "id": "0e07573c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "79bf3682",
+   "id": "1d0d719b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "58d52b74",
+   "id": "d84728eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8f1e578c",
+   "id": "eb22acda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c5a93551",
+   "id": "80288e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2795cc61",
+   "id": "8de9ce70",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "32dec6d8",
+   "id": "17ffa5f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a7baf297",
+   "id": "b80b2f96",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4f967cc9",
+   "id": "57067c1a",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "23ffeeaa",
+   "id": "d6e2a52a",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "59a6ad31",
+   "id": "fe54bc3e",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6448a646",
+   "id": "9fb410a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "76f28cd0",
+   "id": "c134f997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b5a3a490",
+   "id": "3eb295d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +249,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "229115df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"cyl_fl\", \"cyl_fr\", \"cyl_rl\", \"cyl_rr\", \"cylinder_horizontal\"]\n",
+    "meshes = []\n",
+    "for name in names:\n",
+    "    meshes.append(pv.read(f\"/home/max/Desktop/python_projects/SimJeb/SimJEB_metadata/{name}.stl\"))\n",
+    "interfaces = meshes[0].merge(meshes[1:])\n",
+    "interfaces.save(\"/home/max/Desktop/python_projects/SimJeb/SimJEB_metadata/interfaces.stl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "081648f6",
+   "id": "8850a68b",
    "metadata": {},
    "outputs": [],
    "source": []
