density pointcloud without interface otliers

--- a/explore_geometry.ipynb
+++ b/explore_geometry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "31fcf844",
    "metadata": {},
    "outputs": [],
@@ -26,25 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8adebeeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = Path(\"/home/max/Desktop/python_projects/SimJeb\")\n",
-    "root = data_dir / \"SimJEB_surfmesh\"\n",
+    "meshes_dir = data_dir / \"SimJEB_surfmesh\"\n",
+    "metadata_dir = data_dir / \"SimJEB_metadata\"\n",
     "dest = data_dir / \"SimJEB_sdf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "6d4aae07",
    "metadata": {},
    "outputs": [],
    "source": [
     "paths = []\n",
-    "for path in root.glob(\"*.obj\"):\n",
+    "for path in meshes_dir.glob(\"*.obj\"):\n",
     "    paths.append(path)"
    ]
   },
@@ -234,21 +235,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
+   "id": "e940f061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(metadata_dir / \"outliers_interfaces.txt\") as f:\n",
+    "    outliers = f.readlines()\n",
+    "outliers = set([e.strip() for e in outliers])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b7a6bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths_clean = [e for e in paths if e.stem not in outliers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "af9426b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 381/381 [01:44<00:00,  3.64it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c742a2ee34941ef83935e237ed0b382",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/330 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "points = []\n",
-    "for path in tqdm(paths):\n",
+    "for path in tqdm(paths_clean):\n",
     "    mesh = pv.read(path)\n",
     "    points.append(mesh.points)\n",
     "points = np.vstack(points)"
@@ -256,28 +286,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "30aff230",
    "metadata": {},
    "outputs": [],
    "source": [
     "pv_points = pv.PolyData(points)\n",
-    "pv_points.save(data_dir / \"SimJEB_metadata\" / \"all_points.vtk\")"
+    "pv_points.save(data_dir / \"SimJEB_metadata\" / \"all_points_no_outliers_interfaces.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "55498057",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14033651"
+       "12599742"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "8eb3f0ab",
    "metadata": {},
    "outputs": [],
@@ -325,13 +355,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "9ab0ba4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "pv_points_downsample = random_downsample_pointcloud(pv_points, 2000000)\n",
-    "pv_points_downsample.save(data_dir / \"SimJEB_metadata\" / \"all_points_2M.vtk\")"
+    "pv_points_downsample.save(data_dir / \"SimJEB_metadata\" / \"all_points_no_outliers_interfaces_2M.vtk\")"
    ]
   },
   {
@@ -633,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "f09b32d7",
    "metadata": {},
    "outputs": [],
@@ -643,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "id": "7fc2fb8f",
    "metadata": {},
    "outputs": [],
@@ -653,64 +683,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "6616c8ce",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000000, 10)"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dd.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "3fae5876",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000000, 10)"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ii.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "id": "b096d472",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pv_points_downsample[\"neighbours_distance\"] = np.mean(dd, axis=1)"
+    "pv_points_downsample[\"density\"] = np.mean(dd[:,1:], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "id": "dc590d97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pv_points_downsample.save(data_dir / \"SimJEB_metadata\" / \"all_points_1M.vtk\")"
+    "pv_points_downsample.save(metadata_dir/ \"all_points_no_outliers_interfaces_2M.vtk\")"
    ]
   },
   {
